# wheely

./: .gitignore  README.md  explan_me_code_while_testing_ui.md  pyproject.toml  wheely-config.json
.claude/skills/: showcase.md
.claude/skills/showcase/: SKILL.md
.github/workflows/: gh-pages.yml
docs/ai/: 2026-05-13-parallelogram-viz-overhaul.md
docs/superpowers/plans/: 2026-05-07-showcase-skill.md  2026-05-07-wheely-kinematic-simulation.md  2026-05-13-config-saveload-and-figure8-motion.md  2026-05-13-dynamics-rework.md
docs/superpowers/specs/: 2026-05-07-showcase-skill-design.md  2026-05-07-wheely-kinematic-simulation-design.md  2026-05-13-config-saveload-and-figure8-motion-design.md  2026-05-13-dynamics-rework-design.md
scripts/: capture.py  deck_builder.py  scenarios.py  showcase.py
showcase/: showcase.html
tests/: conftest.py  test_dynamics.py  test_geometry.py  test_kinematics.py  test_terrain.py
web/: controls.js  index.html  metrics-chart.js  platform-viz.js  scene.js  simulation.js  terrain-viz.js
wheely/: __init__.py  dynamics.py  geometry.py  kinematics.py  server.py  terrain.py
