[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wheely"
version = "0.1.0"
description = "Kinematic simulation for a self-leveling tricycle robotic platform"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.98",
    "httpx>=0.27",
]
showcase = [
    "playwright>=1.40",
    "Pillow>=10.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["wheely*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
